<?xml version="1.0"?>
<package format="2">
  <name>solution</name>
  <version>0.0.0</version>
  <description>The solution package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tank</depend>

  <export>
  </export>
</package>
